# mechatron

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMPATIBILITY.md  LICENSE  PLAN.md  README.md  binding.gyp  bunfig.toml  index.js  package-lock.json  package.json  tsconfig.json  tsconfig.meta.json
.github/workflows/: build-reusable.yml  build.yml  release.yml
docs/: ffi-error-handler-coverage.md
extensions/gnome-wm/: extension.js  metadata.json
extensions/mechatron/: extension-legacy.js  extension.js  metadata.json
ffi/clipboard/: Cargo.toml
ffi/clipboard/src/: lib.rs
ffi/keyboard/: Cargo.toml  build.rs
ffi/keyboard/src/: lib.rs
ffi/memory/: Cargo.toml
ffi/memory/src/: lib.rs
ffi/mouse/: Cargo.toml
ffi/mouse/src/: lib.rs
ffi/process/: Cargo.toml
ffi/process/src/: lib.rs
ffi/screen/: Cargo.toml
ffi/screen/src/: lib.rs
ffi/shared/: Cargo.toml
ffi/shared/src/: lib.rs
ffi/src/: clipboard.rs  keyboard.rs  memory.rs  mouse.rs  process.rs  screen.rs  window.rs
ffi/window/: Cargo.toml
ffi/window/src/: lib.rs
lib/: Bounds.ts  Clipboard.ts  Hash.ts  Image.ts  Keyboard.ts  Memory.ts  Module.ts  Mouse.ts  Process.ts  Range.ts  Screen.ts  Size.ts  Timer.ts  Window.ts  backend.ts  constants.ts  index.ts  napi.ts  native.ts
lib/clipboard/: Clipboard.ts  linux.ts
lib/dbus/: connection.ts  wire.ts
lib/ffi/: bun.ts  clipboard.ts  framebuffer.ts  keyboard-portal.ts  keyboard.ts  libc.ts  linux.ts  mac.ts  memory.ts  mouse-portal.ts  mouse.ts  process.ts  screen-portal.ts  screen.ts  uinput.ts  win.ts  window.ts  x11.ts  xconn.ts  xproto.ts
lib/gext/: input.ts  installer.ts  window.ts
lib/input/: uinput.ts
lib/keyboard/: Keyboard.ts  constants.ts  index.ts
lib/memory/: Memory.ts
lib/mouse/: Mouse.ts  constants.ts  index.ts
lib/napi/: clipboard.ts  keyboard.ts  memory.ts  mouse.ts  process.ts  resolve.ts  screen.ts  window.ts
lib/nolib/: clipboard-sh.ts  clipboard-x11.ts  clipboard.ts  ioctl.ts  keyboard-gext.ts  keyboard-portal.ts  keyboard-vt.ts  keyboard-x11.ts  keyboard.ts  memory.ts  mouse-gext.ts  mouse-portal.ts  mouse-vt.ts  mouse-x11.ts  mouse.ts  process.ts  screen-portal.ts  screen-vt.ts  screen-x11.ts  screen.ts  uinput.ts  window-gext.ts  window-portal.ts  window-x11.ts  window.ts
lib/platform/: index.ts  mechanisms.ts  types.ts
lib/portal/: atspi.ts  gnome-ext-installer.ts  gnome-wm.ts  remote-desktop.ts  screenshot.ts  util.ts
lib/process/: Module.ts  Process.ts  index.ts
lib/screen/: Screen.ts  framebuffer.ts  index.ts  portal.ts
lib/types/: Color.ts  Ptr.ts  Timer.ts  index.ts
lib/window/: Window.ts
lib/x11proto/: conn.ts  request.ts  wire.ts  xconn.ts  xproto.ts
napi/: Cargo.toml
napi/clipboard/: Cargo.toml  build.rs
napi/clipboard/src/: lib.rs
napi/keyboard/: Cargo.toml  build.rs
napi/keyboard/src/: lib.rs
napi/memory/: Cargo.toml  build.rs
napi/memory/src/: lib.rs
napi/mouse/: Cargo.toml
napi/mouse/src/: lib.rs
napi/process/: Cargo.toml  build.rs
napi/process/src/: lib.rs
napi/screen/: Cargo.toml  build.rs
napi/screen/src/: lib.rs
napi/shared/: Cargo.toml
napi/shared/src/: lib.rs
napi/src/: clipboard.rs  clipboard_wl.rs  clipboard_x11.rs  dbus_portal.rs  ei.rs  ei_input.rs  keyboard.rs  memory.rs  mouse.rs  process.rs  pw.rs  pw_capture.rs  screen.rs  screencast.rs  screencast_portal.rs  window.rs  x11.rs
napi/window/: build.rs
napi/window/src/: lib.rs
native-rs/: Cargo.toml  build.rs
native-rs/clipboard/: Cargo.toml
native-rs/keyboard/: Cargo.toml
native-rs/memory/: Cargo.toml
native-rs/mouse/: Cargo.toml  build.rs
native-rs/mouse/src/: lib.rs
native-rs/process/: Cargo.toml  build.rs
native-rs/screen/src/: lib.rs
native-rs/src/: clipboard.rs  keyboard.rs  keys.rs  lib.rs  mach.rs  memory.rs  mouse.rs  process.rs  screen.rs  timer.rs  window.rs
native-rs/window/: Cargo.toml  build.rs
src/: BoundsAdapter.cc  BoundsAdapter.h  ClassAdapter.h  ClipboardAdapter.cc  ClipboardAdapter.h  ColorAdapter.cc  ColorAdapter.h  HashAdapter.cc  HashAdapter.h  ImageAdapter.cc  ImageAdapter.h  KeyboardAdapter.cc  KeyboardAdapter.h  MemoryAdapter.cc  MemoryAdapter.h  ModuleAdapter.cc  ModuleAdapter.h  MouseAdapter.cc  MouseAdapter.h  PointAdapter.cc  PointAdapter.h  ProcessAdapter.cc  ProcessAdapter.h  RangeAdapter.cc  RangeAdapter.h  RobotAdapter.cc  RobotAdapter.h  ScreenAdapter.cc  ScreenAdapter.h  SizeAdapter.cc  SizeAdapter.h  TimerAdapter.cc  TimerAdapter.h  WindowAdapter.cc  WindowAdapter.h
src/native/: clipboard.cc  init.cc  keyboard.cc  memory.cc  mouse.cc  native.h  process.cc  screen.cc  window.cc
src/robot/: Keyboard.cc  Mouse.cc
test/: bun.test.ts  ci-run-tests.sh  clipboard.js  compatibility.js  dlopen-block.c  fb-stub.c  keyboard.js  matrix.js  memory-child.c  memory-child.js  memory-child.rs  memory.js  mouse.js  portal.js  process.js  screen.js  test-ci.js  test.js  types.js  uinput.js  window.js  xproto.js
test/mach-diag/: binding.gyp  mach_diag.c  package.json  run.js
