[package]
name = "mechatron-native"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
regex = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
