[package]
name = "mechatron-ffi-keyboard"
version = "0.0.0"
edition = "2021"

[lib]
name = "mechatron_ffi_keyboard"
crate-type = ["cdylib"]

[target.'cfg(target_os = "linux")'.dependencies]
mechatron-ffi-shared = { path = "../shared" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
] }
