[package]
name = "mechatron-process"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
mechatron-shared = { path = "../shared" }
libc = "0.2"
regex = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
] }
regex = "1"

[build-dependencies]
napi-build = "2"
